--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo-updates": "~0.18.17"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
