--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
+    "formik": "^2.1.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0"
