--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "formik": "^2.1.4",
-    "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "yup": "^1.3.3",
     "expo-image-picker": "~14.3.2",
     "expo-permissions": "~14.2.1",
-    "expo-media-library": "~15.4.1"
+    "expo-media-library": "~15.4.1",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
