--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
