--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "apisauce": "^3.0.1",
     "expo": "~49.0.15",
+    "expo-blur": "^12.9.2",
     "expo-constants": "^14.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
@@ -23,12 +26,14 @@
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "formik": "^2.4.5",
+    "lottie-react-native": "5.1.6",
+    "moment": "^2.30.1",
     "react-native": "0.72.6",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "yup": "^1.3.3",
-    "lottie-react-native": "5.1.6"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
