--- a/package.json
+++ b/package.json
@@ -16,24 +16,28 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "apisauce": "^3.0.1",
+    "core-js": "^3.36.1",
     "expo": "~49.0.15",
-    "expo-blur": "^12.9.2",
+    "expo-blur": "~12.4.1",
     "expo-constants": "^14.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo-updates": "~0.18.19",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "5.1.6",
     "moment": "^2.30.1",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "yup": "^1.3.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "yup": "^1.3.3",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
