--- a/app.json
+++ b/app.json
@@ -36,6 +36,8 @@
     },
     "updates": {
       "url": "https://u.expo.dev/f821a269-7585-4238-ad26-88d820075443"
-    }
-  }
+    },
+    "sdkVersion": "49.0.0"
+  },
+  "name": "react-native-donewithit"
 }
