--- a/package.json
+++ b/package.json
@@ -17,29 +17,34 @@
     "@react-navigation/stack": "^6.3.20",
     "apisauce": "^3.0.1",
     "core-js": "^3.36.1",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
+    "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "5.1.6",
-    "moment": "^2.30.1",
     "react-native": "0.72.10",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "sharp-cli": "^4.2.0",
     "yup": "^1.3.3",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0"
+    "@bugsnag/expo": "^49.0.0",
+    "expo-application": "~5.3.0",
+    "expo-crypto": "~12.4.1",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
